// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buttons should accept other button types 1`] = `
<button
  className="btn undefined"
  disabled={false}
  type="submit"
/>
`;

exports[`buttons should default to button type 1`] = `
<button
  className="btn undefined"
  disabled={false}
  type="button"
/>
`;
